# server/proto/service.swagger.json
@@ -15,14 +15,14 @@
     "application/json"
   ],
   "paths": {
-    "/v1/sparklepony/sayhello": {
+    "/sparklepony/v1/items": {
       "post": {
-        "operationId": "SayHello",
+        "operationId": "GetItems",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/sparkleponyHelloReply"
+              "$ref": "#/definitions/sparkleponyItemsReply"
             }
           }
         },
@@ -32,30 +32,129 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/sparkleponyHelloRequest"
+              "$ref": "#/definitions/sparkleponyEmpty"
             }
           }
         ],
         "tags": [
-          "Greeter"
+          "Store"
+        ]
+      }
+    },
+    "/sparklepony/v1/items/featured": {
+      "post": {
+        "operationId": "GetFeatured",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/sparkleponyFeaturedItemsReply"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/sparkleponyEmpty"
+            }
+          }
+        ],
+        "tags": [
+          "Store"
         ]
       }
     }
   },
   "definitions": {
-    "sparkleponyHelloReply": {
+    "sparkleponyEmpty": {
+      "type": "object"
+    },
+    "sparkleponyFeaturedItem": {
       "type": "object",
       "properties": {
-        "message": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "title": {
+          "type": "string"
+        },
+        "quote": {
+          "type": "string"
+        },
+        "image_url": {
+          "type": "string"
+        },
+        "store_name": {
+          "type": "string"
+        },
+        "store_avatar_url": {
+          "type": "string"
+        },
+        "price": {
+          "type": "string"
+        },
+        "category": {
           "type": "string"
         }
       }
     },
-    "sparkleponyHelloRequest": {
+    "sparkleponyFeaturedItemsReply": {
       "type": "object",
       "properties": {
-        "name": {
+        "item": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/sparkleponyFeaturedItem"
+          }
+        }
+      }
+    },
+    "sparkleponyItem": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "title": {
           "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "image_url": {
+          "type": "string"
+        },
+        "price": {
+          "type": "string"
+        },
+        "store_name": {
+          "type": "string"
+        },
+        "store_avatar_url": {
+          "type": "string"
+        },
+        "store_description": {
+          "type": "string"
+        },
+        "featured": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      }
+    },
+    "sparkleponyItemsReply": {
+      "type": "object",
+      "properties": {
+        "item": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/sparkleponyItem"
+          }
         }
       }
     }
